2000-03-18  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/Query.c (xaccInitQuery): make the standard engine
 	order the default sort order.

	* src/gnome/window-adjust.c (adjBRefresh): update the title

	* src/Refresh.c (gnc_account_ui_refresh): refresh the edit account
	and adjust balance windows too.

	* src/gnome/dialog-edit.c: add gui for changed the account type.

	* src/engine/Account.c (xaccAccountSetType): allow account types
 	to be changed.

2000-03-15  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/extensions.scm (gnc:new-menu-namer): register and
 	translate the names correctly.

	* src/scm/report.scm (gnc:report-menu-setup win): make sure the
 	report title gets registered and translated.

	* src/scm/report/hello-world.scm: i18n'd this report.

2000-03-14  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/register/gnome/gnucash-sheet.c
 	(gnucash_register_key_press_cb): generate activate event on a
 	keypad enter as well as the return key.

	* Docs/C/xacc-ticker.html: updated for Yahoo Europe information.

2000-03-13  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/dialog-utils.c: added Yahoo Europe to the quote source
 	menu.

	* src/quotes/Quote.pm: added method for getting Yahoo European
 	quotes. Also, fixed the parsing of csv data.

	* src/quotes/gnc-prices: cleanup the code, less wordy output.

	* src/quotes/Quote.pm (yahoo): updates from latest YahooQuote.pm

2000-03-12  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/c-interface.scm (gnc:error->string tag args): print a
 	stack backtrace.

	* src/gnome/cursors.c: when given a NULL argument, the set and
	unset busy cursor function change all top-level window cursors.
	This breaks the motif side though, in that the cursor will no
	longer get set there. Oh well.

	* src/gnome/window-register.c (duplicateCB): new callback for
 	duplicating the current transaction/split.

	* src/SplitLedger.c (xaccSRDuplicateCurrent): new function to