@@ -42,6 +42,33 @@
 #include "query-user.h"
 #include "util.h"
 
+
+struct _qifimportwindow
+{
+  /* on the Files tab */
+  GtkWidget * dialog;
+  GtkWidget * currency_entry;
+  GtkWidget * radix_picker;
+  GtkWidget * date_picker;
+  GtkWidget * filename_entry;
+  GtkWidget * acct_auto_button;
+  GtkWidget * acct_entry;
+  GtkWidget * selected_file_list;
+
+  /* on the Accounts tab */
+  GtkWidget * acct_list;
+  
+  /* on the Categories tab */
+  GtkWidget * cat_list;
+
+  SCM       imported_files;
+  SCM       selected_file;
+  SCM       mapping_info; 
+  SCM       cat_display_info;
+  SCM       acct_display_info;
+};
+
+
 static void update_file_info(QIFImportWindow * win, SCM qiffile);
 static void update_file_page(QIFImportWindow * win);
 static void update_accounts_page(QIFImportWindow * win);
